@@ -30,13 +30,13 @@ global $MOS_GALLERY_PARAMS;
 // Mambo / Joomla calls index.php directly for popups - we need to make
 // sure that the option var has been extracted into the environment
 // otherwise it just won't work.
-$option = isset($_REQUEST['option']) ? $_REQUEST['option'] : null;
-$op = isset($_REQUEST['op']) ? $_REQUEST['op'] : null;
-$mop = isset($_REQUEST['mop']) ? $_REQUEST['mop'] : null;
-$name = isset($_REQUEST['name']) ? $_REQUEST['name'] : null;
-$include = isset($_REQUEST['include']) ? $_REQUEST['include'] : null;
-$postnuke = ( defined('_PN_VERSION_ID') || defined('PN_VERSION_ID') ) ? true : false;
-$phpnuke = isset($GLOBALS['nukeurl']) ? true : false;
+$option		= isset($_REQUEST['option']) ? $_REQUEST['option'] : null;
+$op			= isset($_REQUEST['op']) ? $_REQUEST['op'] : null;
+$mop		= isset($_REQUEST['mop']) ? $_REQUEST['mop'] : null;
+$name		= isset($_REQUEST['name']) ? $_REQUEST['name'] : null;
+$include	= isset($_REQUEST['include']) ? $_REQUEST['include'] : null;
+$postnuke	= ( defined('_PN_VERSION_ID') || defined('PN_VERSION_ID') ) ? true : false;
+$phpnuke	= isset($GLOBALS['nukeurl']) ? true : false;
 
 /*
  * Detect PHP-Nuke, Postnuke, phpBB2 or Mambo and react accordingly.
@@ -48,8 +48,8 @@ if ($postnuke ||
 	$phpnuke ||
 	!strcmp($op, "modload") ||
 	!strcmp($mop, "modload") ||
-	isset($option)) {
-
+	isset($option))
+{
 	/*
 	 * Change this variable if your Gallery module has a different
 	 * name in the Nuke or phpBB2 modules directory.
@@ -156,6 +156,7 @@ if ($postnuke ||
 		'popups/move_photo.php',
 		'popups/photo_owner.php',
 		'popups/rearrange.php',
+		'popups/rebuild_capture_dates.php',
 		'popups/rebuild_thumbs.php',
 		'popups/recreate_captions.php',
 		'popups/rename_album.php',
