@@ -39,7 +39,7 @@
 ../lib/popup.php
 ../lib/stats.php
 ../lib/usage.php
-../new_password.php 
+../new_password.php
 ../poll_results.php
 ../popups/add_comment.php
 ../popups/add_photos.php
@@ -70,6 +70,7 @@
 ../popups/progress_uploading.php
 ../popups/rearrange.php
 ../popups/rebuild_thumbs.php
+../popups/rebuild_capture_dates.php
 ../popups/recreate_captions.php
 ../popups/register.php
 ../popups/rename_album.php
