@@ -1,3 +1,11 @@
+2007-03-06 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b43
+
+ * New: Added functionality to rebuild capture dates.
+
+ * Fix: Don't strip Port from Urls
+
+ * Change: Some minore layout things.
+
 2007-03-01 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b42
 
  * Fix: Moved inclusion of page header on mainpage before some javascripts
